CREATE TABLE users (
    user_id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    username VARCHAR(50) NOT NULL UNIQUE,
    email VARCHAR(100) NOT NULL UNIQUE,
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP
);

CREATE TABLE exercises (
    exercise_id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name VARCHAR(100) NOT NULL UNIQUE,
    target_muscle VARCHAR(100) NOT NULL,
    description TEXT
);

CREATE TABLE workouts (
    workout_id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id INTEGER NOT NULL,
    workout_date DATE NOT NULL,
    notes TEXT,
    CONSTRAINT fk_workouts_user
        FOREIGN KEY (user_id)
        REFERENCES users(user_id)
        ON DELETE RESTRICT
        ON UPDATE CASCADE
);

CREATE TABLE workout_exercises (
    workout_exercise_id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    workout_id INTEGER NOT NULL,
    exercise_id INTEGER NOT NULL,
    sets INTEGER NOT NULL
        CONSTRAINT ck_workout_exercises_sets_positive CHECK (sets > 0),
    reps INTEGER NOT NULL
        CONSTRAINT ck_workout_exercises_reps_positive CHECK (reps > 0),
    weight_kg NUMERIC(6, 2) NOT NULL
        CONSTRAINT ck_workout_exercises_weight_nonnegative
        CHECK (weight_kg >= 0),

    CONSTRAINT fk_workout_exercises_workout
        FOREIGN KEY (workout_id)
        REFERENCES workouts(workout_id)
        ON DELETE CASCADE
        ON UPDATE CASCADE,

    CONSTRAINT fk_workout_exercises_exercise
        FOREIGN KEY (exercise_id)
        REFERENCES exercises(exercise_id)
        ON DELETE RESTRICT
        ON UPDATE CASCADE,

    CONSTRAINT uq_workout_exercise_pair
        UNIQUE (workout_id, exercise_id)
);

INSERT INTO users (username, email)
VALUES ('demo_user', 'demo@fittracker.local');

INSERT INTO exercises (name, target_muscle, description)
VALUES
    (
        'Bench Press',
        'Chest',
        'Flat barbell press for chest strength.'
    ),
    (
        'Squat',
        'Legs',
        'Barbell back squat for lower-body strength.'
    ),
    (
        'Deadlift',
        'Back',
        'Barbell pull for posterior-chain strength.'
    ),
    (
        'Overhead Press',
        'Shoulders',
        'Standing barbell shoulder press.'
    ),
    (
        'Triceps Pushdown',
        'Triceps',
        'Cable pushdown for the triceps.'
    );
