@startuml

title Fit Tracker – Relational Database Schema

skinparam backgroundColor #FFFFFF
skinparam defaultFontColor #000000
skinparam shadowing false

!define PK <b><color:gold>PK</color></b>
!define FK <i><color:gray>FK</color></i>
!define UQ <color:blue>UQ</color>

hide methods
hide stereotypes

entity users {
    PK user_id       : INTEGER
    --
    UQ username      : VARCHAR(50)
    UQ email         : VARCHAR(100)
       created_at    : TIMESTAMPTZ
}

entity exercises {
    PK exercise_id   : INTEGER
    --
    UQ name          : VARCHAR(100)
       target_muscle : VARCHAR(100)
       description   : TEXT
}

entity workouts {
    PK workout_id    : INTEGER
    --
    FK user_id       : INTEGER
       workout_date  : DATE
       notes         : TEXT
}

entity workout_exercises {
    PK workout_exercise_id : INTEGER
    --
    FK workout_id          : INTEGER
    FK exercise_id         : INTEGER
       sets                : INTEGER
       reps                : INTEGER
       weight_kg           : NUMERIC(6,2)
    --
    UQ workout_id + exercise_id
}

users     ||--o{ workouts          : "records"
workouts  ||--o{ workout_exercises : "contains"
exercises ||--o{ workout_exercises : "is logged in"

note right of workout_exercises
  sets > 0
  reps > 0
  weight_kg >= 0
  UNIQUE (workout_id, exercise_id)
end note

@enduml
